--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,9 @@ unbind C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
-set -g default-terminal "screen-256color" # fix colors
+#fix colors
+set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',alacritty:RGB'
 
 # split panes using | and -
 bind ';' split-window -h
@@ -14,6 +16,9 @@ unbind '"'
 unbind %
 
 bind -n M-r source-file ~/.tmux.conf # reload config file
+
+#fix for autoread in nvim
+set-option -g focus-events on
 
 # switch panes using Alt-arrow without prefix
 #bind -n M-Left select-pane -L
@@ -42,6 +47,9 @@ bind -n 'M-}' next-window
 bind -n C-T new-window -c "#{pane_current_path}"
 bind C-T command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind K confirm kill-session
+
+# fix slow escape in vim/nvim
+set -sg escape-time 0
 
 # macOS copy/paste fix
 #set -g mouse on
