--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ set-option -g prefix M-a
 bind-key M-a send-prefix
 
 #fix colors
-set -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',alacritty:RGB'
+set -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # split panes using | and -
 bind ';' split-window -h
