--- a/dots/_alacritty.yml
+++ b/dots/_alacritty.yml
@@ -11,17 +11,17 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-env:
+#env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  TERM: xterm-256color
+  #TERM: xterm-256color
   
 
-window:
+  #window:
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -43,9 +43,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  padding:
-    x: 15
-    y: 15
+  #padding:
+  #  x: 15
+  #  y: 15
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -102,7 +102,7 @@ window:
 # Font configuration
 font:
   # Normal (roman) font face
-  normal:
+  #normal:
     # Font family
     #
     # Default:
@@ -110,10 +110,10 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     #family: Hack Nerd Font Mono 
-    family: FiraCode Nerd Font
+    #family: FiraCode Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    #style: Regular
 
   # Bold font face
   #bold:
@@ -154,7 +154,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 10.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
