--- a/dots/_alacritty.yml
+++ b/dots/_alacritty.yml
@@ -11,25 +11,25 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: xterm-256color
+  TERM: xterm-256color
   
 
-  #window:
+window:
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
   # must be at least `2`, while using a value of `0` for columns and lines will
   # fall back to the window manager's recommended size.
   #dimensions:
-  #  columns: 0
-  #  lines: 0
+  #columns: 125
+  #  lines: 476
 
   # Window position (changes require restart)
   #
@@ -43,9 +43,9 @@
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
-  #  x: 15
-  #  y: 15
+  padding:
+    x: 15
+    y: 15
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -70,7 +70,7 @@
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  #startup_mode: Windowed
+  startup_mode: Maximized
 
   # Window title
   #title: Alacritty
@@ -102,7 +102,7 @@
 # Font configuration
 font:
   # Normal (roman) font face
-  #normal:
+  normal:
     # Font family
     #
     # Default:
@@ -111,9 +111,10 @@ font:
     #   - (Windows) Consolas
     #family: Hack Nerd Font Mono 
     #family: FiraCode Nerd Font
+    family: Menlo
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Regular
 
   # Bold font face
   #bold:
@@ -154,7 +155,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 10.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -177,10 +178,8 @@ font:
   #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-#draw_bold_text_with_bright_colors: false
-
-# Colors (Tomorrow Night)
-#colors:
+#draw_bold_text_with_bright_colorms: false
+#
 colors:
   primary:
     background: '0x282828'
@@ -205,6 +204,9 @@ colors:
     magenta: '0xd3869b'
     cyan:    '0x89b482'
     white:   '0xdfbf8e'
+
+# Colors (Tomorrow Night)
+#colors:
   # Default colors
   #primary:
   #  background: '#1d1f21'
@@ -357,7 +359,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-#background_opacity: 0.95
+#window.opacity: 0.95
 
 #selection:
   # This string contains all characters that are used as separators for
@@ -677,7 +679,93 @@ colors:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+key_bindings:
+  - { key: A,         mods: Alt,        chars: "\x1ba" }
+  - { key: B,         mods: Alt,        chars: "\x1bb" }
+  - { key: C,         mods: Alt,        chars: "\x1bc" }
+  - { key: D,         mods: Alt,        chars: "\x1bd" }
+  - { key: E,         mods: Alt,        chars: "\x1be" }
+  - { key: F,         mods: Alt,        chars: "\x1bf" }
+  - { key: G,         mods: Alt,        chars: "\x1bg" }
+  - { key: H,         mods: Alt,        chars: "\x1bh" }
+  - { key: I,         mods: Alt,        chars: "\x1bi" }
+  - { key: J,         mods: Alt,        chars: "\x1bj" }
+  - { key: K,         mods: Alt,        chars: "\x1bk" }
+  - { key: L,         mods: Alt,        chars: "\x1bl" }
+  - { key: M,         mods: Alt,        chars: "\x1bm" }
+  - { key: N,         mods: Alt,        chars: "\x1bn" }
+  - { key: O,         mods: Alt,        chars: "\x1bo" }
+  - { key: P,         mods: Alt,        chars: "\x1bp" }
+  - { key: Q,         mods: Alt,        chars: "\x1bq" }
+  - { key: R,         mods: Alt,        chars: "\x1br" }
+  - { key: S,         mods: Alt,        chars: "\x1bs" }
+  - { key: T,         mods: Alt,        chars: "\x1bt" }
+  - { key: U,         mods: Alt,        chars: "\x1bu" }
+  - { key: V,         mods: Alt,        chars: "\x1bv" }
+  - { key: W,         mods: Alt,        chars: "\x1bw" }
+  - { key: X,         mods: Alt,        chars: "\x1bx" }
+  - { key: Y,         mods: Alt,        chars: "\x1by" }
+  - { key: Z,         mods: Alt,        chars: "\x1bz" }
+  - { key: A,         mods: Alt|Shift,  chars: "\x1bA" }
+  - { key: B,         mods: Alt|Shift,  chars: "\x1bB" }
+  - { key: C,         mods: Alt|Shift,  chars: "\x1bC" }
+  - { key: D,         mods: Alt|Shift,  chars: "\x1bD" }
+  - { key: E,         mods: Alt|Shift,  chars: "\x1bE" }
+  - { key: F,         mods: Alt|Shift,  chars: "\x1bF" }
+  - { key: G,         mods: Alt|Shift,  chars: "\x1bG" }
+  - { key: H,         mods: Alt|Shift,  chars: "\x1bH" }
+  - { key: I,         mods: Alt|Shift,  chars: "\x1bI" }
+  - { key: J,         mods: Alt|Shift,  chars: "\x1bJ" }
+  - { key: K,         mods: Alt|Shift,  chars: "\x1bK" }
+  - { key: L,         mods: Alt|Shift,  chars: "\x1bL" }
+  - { key: M,         mods: Alt|Shift,  chars: "\x1bM" }
+  - { key: N,         mods: Alt|Shift,  chars: "\x1bN" }
+  - { key: O,         mods: Alt|Shift,  chars: "\x1bO" }
+  - { key: P,         mods: Alt|Shift,  chars: "\x1bP" }
+  - { key: Q,         mods: Alt|Shift,  chars: "\x1bQ" }
+  - { key: R,         mods: Alt|Shift,  chars: "\x1bR" }
+  - { key: S,         mods: Alt|Shift,  chars: "\x1bS" }
+  - { key: T,         mods: Alt|Shift,  chars: "\x1bT" }
+  - { key: U,         mods: Alt|Shift,  chars: "\x1bU" }
+  - { key: V,         mods: Alt|Shift,  chars: "\x1bV" }
+  - { key: W,         mods: Alt|Shift,  chars: "\x1bW" }
+  - { key: X,         mods: Alt|Shift,  chars: "\x1bX" }
+  - { key: Y,         mods: Alt|Shift,  chars: "\x1bY" }
+  - { key: Z,         mods: Alt|Shift,  chars: "\x1bZ" }
+  - { key: Key1,      mods: Alt,        chars: "\x1b1" }
+  - { key: Key2,      mods: Alt,        chars: "\x1b2" }
+  - { key: Key3,      mods: Alt,        chars: "\x1b3" }
+  - { key: Key4,      mods: Alt,        chars: "\x1b4" }
+  - { key: Key5,      mods: Alt,        chars: "\x1b5" }
+  - { key: Key6,      mods: Alt,        chars: "\x1b6" }
+  - { key: Key7,      mods: Alt,        chars: "\x1b7" }
+  - { key: Key8,      mods: Alt,        chars: "\x1b8" }
+  - { key: Key9,      mods: Alt,        chars: "\x1b9" }
+  - { key: Key0,      mods: Alt,        chars: "\x1b0" }
+  - { key: Key1,      mods: Alt|Shift,  chars: "\x1b!" }
+  - { key: Key2,      mods: Alt|Shift,  chars: "\x1b@" }
+  - { key: Key3,      mods: Alt|Shift,  chars: "\x1b#" }
+  - { key: Key4,      mods: Alt|Shift,  chars: "\x1b$" }
+  - { key: Key5,      mods: Alt|Shift,  chars: "\x1b%" }
+  - { key: Key6,      mods: Alt|Shift,  chars: "\x1b^" }
+  - { key: Key7,      mods: Alt|Shift,  chars: "\x1b&" }
+  - { key: Key8,      mods: Alt|Shift,  chars: "\x1b*" }
+  - { key: Key9,      mods: Alt|Shift,  chars: "\x1b(" }
+  - { key: Key0,      mods: Alt|Shift,  chars: "\x1b)" }
+  - { key: Grave,     mods: Alt,        chars: "\x1b`"  } # Alt + `
+  - { key: Grave,     mods: Alt|Shift,  chars: "\x1b~"  } # Alt + ~
+  - { key: Comma,     mods: Alt,        chars: "\x1b,"  } # Alt + ,
+  - { key: Period,    mods: Alt,        chars: "\x1b."  } # Alt + .
+  - { key: Period,    mods: Alt|Shift,  chars: "\x1b>"  } # Alt + >
+  - { key: Comma,     mods: Alt|Shift,  chars: "\x1b<"  } # Alt + <
+  - { key: Minus,     mods: Alt|Shift,  chars: "\x1b_"  } # Alt + _
+  - { key: Backslash, mods: Alt,        chars: "\x1b\\" } # Alt + \
+  - { key: Backslash, mods: Alt|Shift,  chars: "\x1b|"  } # Alt + |
+  - { key: LBracket,  mods: Alt,        chars: "\x1b["  } # Alt + [
+  - { key: LBracket,  mods: Alt|Shift,  chars: "\x1b{"  } # Alt + {
+  - { key: RBracket,  mods: Alt,        chars: "\x1b]"  } # Alt + ]
+  - { key: RBracket,  mods: Alt|Shift,  chars: "\x1b}"  } # Alt + }
+      
   #- { key: Paste,                                action: Paste          }
   #- { key: Copy,                                 action: Copy           }
   #- { key: L,         mods: Control,             action: ClearLogNotice }
@@ -757,13 +845,13 @@ colors:
   #- { key: K,              mods: Command, mode: ~Vi, chars: "\x0c"            }
   #- { key: Key0,           mods: Command,            action: ResetFontSize    }
   #- { key: Equals,         mods: Command,            action: IncreaseFontSize }
-  #- { key: Plus,           mods: Command,            action: IncreaseFontSize }
-  #- { key: NumpadAdd,      mods: Command,            action: IncreaseFontSize }
-  #- { key: Minus,          mods: Command,            action: DecreaseFontSize }
-  #- { key: NumpadSubtract, mods: Command,            action: DecreaseFontSize }
+  - { key: Plus,           mods: Command,            action: IncreaseFontSize }
+  - { key: NumpadAdd,      mods: Command,            action: IncreaseFontSize }
+  - { key: Minus,          mods: Command,            action: DecreaseFontSize }
+  - { key: NumpadSubtract, mods: Command,            action: DecreaseFontSize }
   #- { key: K,              mods: Command,            action: ClearHistory     }
-  #- { key: V,              mods: Command,            action: Paste            }
-  #- { key: C,              mods: Command,            action: Copy             }
+  - { key: V,              mods: Command,            action: Paste            }
+  - { key: C,              mods: Command,            action: Copy             }
   #- { key: C,              mods: Command, mode: Vi,  action: ClearSelection   }
   #- { key: H,              mods: Command,            action: Hide             }
   #- { key: M,              mods: Command,            action: Minimize         }
