some macos updates to kitty config

--- a/dots/XDG_CONFIG/kitty/kitty.conf
+++ b/dots/XDG_CONFIG/kitty/kitty.conf
@@ -23,7 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -1018,7 +1018,7 @@ startup_session $HOME/.local/kitty/session
 #: with the mouse. The special value of ``ask`` means that kitty will
 #: ask before opening the link.
 
-# term xterm-256color
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
@@ -1054,7 +1054,7 @@ startup_session $HOME/.local/kitty/session
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
- macos_option_as_alt left
+macos_option_as_alt left
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -1069,7 +1069,7 @@ startup_session $HOME/.local/kitty/session
 #: Hide the kitty window from running tasks (⌘+Tab) on macOS. Changing
 #: this setting by reloading the config is not supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
@@ -1198,6 +1198,7 @@ startup_session $HOME/.local/kitty/session
 #: kitty +kitten hints --hints-offset to zero for all mappings,
 #: including the builtin ones.
 
+#map f1 launch --allow-remote-control kitty +kitten broadcast
 map f1 launch --allow-remote-control kitty +kitten broadcast --match-tab state:focused
 
 #: Clipboard {{{
