Adds qtile, and a plugin to display colors in nvim

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ __pycache__
 __pycahce__/*
 dots/XDG_CONFIG/nvim/plugin
 dots/XDG_CONFIG/nvim/plugin/*
+dots/XDG_CONFIG/*/__pycahce__
+dots/XDG_CONFIG/*/__pycahce__/*
