--- a/dots/XDG_CONFIG/kitty/kitty.conf
+++ b/dots/XDG_CONFIG/kitty/kitty.conf
@@ -7,6 +7,7 @@
 #: characters.
 
 font_family Hack Nerd Font Mono
+#font_family FuraMono Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -1517,3 +1518,4 @@ map f1 launch --allow-remote-control kitty +kitten broadcast --match-tab state:f
 # 1984 Dark
 include current-theme.conf
 # END_KITTY_THEME
+
