--- a/dots/_tmux.conf
+++ b/dots/_tmux.conf
@@ -1,42 +1,46 @@
- #tmux configuration
-
-# rebind prefix
+# #tmux configuration
+#
+## rebind prefix to Alt + A
 unbind C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
-
-#fix colors
+##fix colors
 set -g default-terminal "xterm-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
-
-# split panes using | and -
+#set -ag terminal-overrides ",xterm-256color:RGB"
+#
+## split panes using | and -
+unbind ';'
+unbind '"'
 bind ';' split-window -h
 bind "'" split-window -v
 unbind '"'
-unbind %
+unbind '%'
 
-bind -n M-r source-file ~/.tmux.conf # reload config file
-
-#fix for autoread in nvim
+##fix for autoread in nvim
 set-option -g focus-events on
 
-# switch panes using Alt-arrow without prefix
-#bind -n M-Left select-pane -L
+## switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
 bind -n M-h select-pane -L
-#bind -n M-Right select-pane -R
+bind -n M-Right select-pane -R
 bind -n M-l select-pane -R
-#bind -n M-Up select-pane -U
+bind -n M-Up select-pane -U
 bind -n M-k select-pane -U
-#bind -n M-Down select-pane -D
+bind -n M-Down select-pane -D
 bind -n M-j select-pane -D
+## resize panes with ALT+HJKL
+bind -n M-H resize-pane -L 2
+bind -n M-L resize-pane -R 2
+bind -n M-K resize-pane -U 2
+bind -n M-J resize-pane -D 2
 
 set -g mouse on # Enable mouse mode
 
-set-option -g allow-rename off # don't rename windows automatically
-set-option -g history-limit 10000
+#set-option -g allow-rename off # don't rename windows automatically
+set-option -g history-limit 100000
 
-# change window/pane indexing to start at 1 instead of 0 and renumber windows
-# eg if window 1,2,3 exist and window 2 is deleted window becomes the new window 2
+## change window/pane indexing to start at 1 instead of 0 and renumber windows
+## eg if window 1,2,3 exist and window 2 is deleted window becomes the new window 2
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
@@ -48,36 +52,49 @@ bind -n C-T new-window -c "#{pane_current_path}"
 bind C-T command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind K confirm kill-session
 
-# fix slow escape in vim/nvim
+## fix slow escape in vim/nvim
 set -sg escape-time 0
 
-# macOS copy/paste fix
-#set -g mouse on
-#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-#bind -n WheelDownPane select-pane -t= \; send-keys -M
-#bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-#bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
-#bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-#bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
-#bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
 
-# To copy, left click and drag to highlight text in yellow, 
-# once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
-#setw -g mode-keys vi
-## Update default binding of `Enter` to also use copy-pipe
-#unbind -T copy-mode-vi Enter
-#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-#set -g @custom_copy_command 'my-clipboard-copy --some-arg'
+## macOS copy/paste fix
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
+bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
 
-#List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-urlview'
+## To copy, left click and drag to highlight text in yellow, 
+## once you release left click yellow text will disappear and will automatically be available in clibboard
 
+### Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# This tmux statusbar config was created by tmuxline.vim
+# on Mon, 08 Feb 2021
+
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=#00afff,bg=#504945"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#00afff"
+set -g status-position "top"
+set -g status-style "none,bg=#3c3836"
+set -g message-style "fg=#00afff,bg=#504945"
+set -g pane-border-style "fg=#504945"
+set -g status-right-length "200"
+set -g status-left-length "200"
+setw -g window-status-activity-style "underscore,fg=#00afff,bg=#3c3836"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#00afff,bg=#3c3836"
+set -g status-left "#[fg=#1d2021,bg=#00afff] #S #[fg=#00afff,bg=#3c3836,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#00afff,bg=#504945,nobold,nounderscore,noitalics]#[fg=#1d2021,bg=#00afff] #h #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#00afff,bg=#3c3836] %R #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#00afff,bg=#504945] %a %Y-%m-%d"
+setw -g window-status-format "#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[default] #I #W #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]#[fg=#00afff,bg=#504945] #I #W #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]"
