updates alacritty  and tmux to work better together

--- a/dots/_tmux.conf
+++ b/dots/_tmux.conf
@@ -7,12 +7,15 @@ bind-key M-a send-prefix
 ##fix colors
 set -g default-terminal "xterm-256color"
 #set -ag terminal-overrides ",xterm-256color:RGB"
+
+# reload config
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #
 ## split panes using | and -
 unbind ';'
 unbind '"'
-bind ';' split-window -h
-bind "'" split-window -v
+bind ';' split-window -h -c "#{pane_current_path}"
+bind "'" split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind '%'
 
@@ -67,17 +70,12 @@ bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
 bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
 bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
-
-## To copy, left click and drag to highlight text in yellow, 
-## once you release left click yellow text will disappear and will automatically be available in clibboard
-
 ### Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-
-# This tmux statusbar config was created by tmuxline.vim
-# on Mon, 08 Feb 2021
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 set -g status-justify "left"
 set -g status "on"
