--- a/dots/_tmux.conf
+++ b/dots/_tmux.conf
@@ -5,8 +5,12 @@ unbind C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 ##fix colors
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
+#set -g default-terminal "screen-256color"
 #set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 
 # reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -51,7 +55,8 @@ set -g renumber-windows on
 bind -n 'M-{' previous-window
 bind -n 'M-}' next-window
 
-bind -n C-T new-window -c "#{pane_current_path}"
+unbind t
+bind t new-window -c "#{pane_current_path}"
 bind C-T command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind K confirm kill-session
 
