Switching back to alacritty and tmux

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,82 +1,75 @@
-# #tmux configuration
-#
-## rebind prefix to Alt + A
-# unbind C-b
-# set-option -g prefix M-a
-# bind-key M-a send-prefix
-# ##fix colors
-set -g default-terminal "xterm-256color"
-#set -ag terminal-overrides ",xterm-256color:RGB"
+# Rebind prefix
+unbind C-b
+set-option -g prefix M-a
+bind-key M-a send-prefix
 
-# reload config
+# Fix colors
+set -ag terminal-overrides ",$TERM:RGB"
+
+# Reload config with prefix-r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-#
-## split panes using | and -
-unbind ';'
-unbind '"'
-bind ';' split-window -h -c "#{pane_current_path}"
-bind "'" split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind '%'
 
-##fix for autoread in nvim
-set-option -g focus-events on
-
-## switch panes using Alt-arrow without prefix
-bind -n C-M-Left select-pane -L
-bind -n C-M-h select-pane -L
-bind -n C-M-Right select-pane -R
-bind -n C-M-l select-pane -R
-bind -n C-M-Up select-pane -U
-bind -n C-M-k select-pane -U
-bind -n C-M-Down select-pane -D
-bind -n C-M-j select-pane -D
-## resize panes with ALT+HJKL
-bind -n M-H resize-pane -L 2
-bind -n M-L resize-pane -R 2
-bind -n M-K resize-pane -U 2
-bind -n M-J resize-pane -D 2
-
-set -g mouse on # Enable mouse mode
-
-#set-option -g allow-rename off # don't rename windows automatically
 set-option -g history-limit 100000
 
-## change window/pane indexing to start at 1 instead of 0 and renumber windows
-## eg if window 1,2,3 exist and window 2 is deleted window becomes the new window 2
+# Windows/Panes
+bind -n C-T new-window -c "#{pane_current_path}"
+bind C-T command-prompt -p "New Session:" "new-session -A -s '%%'"
+
+# Split panes using ; and '
+unbind '"' # Formerly split verticle
+unbind '%' # Formerly split horizontal
+unbind ';' # Formerly switch to previous pane
+unbind "'" # Formerly prompt for window index to select
+bind ';' split-window -h -c "#{pane_current_path}"
+bind "'" split-window -v -c "#{pane_current_path}"
+
+# Switch panes using Alt-arrow without prefix
+bind -n M-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-h select-pane -L
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+bind -n M-l select-pane -R
+
+# Enable mouse mode
+set -g mouse on
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+# bind -n WheelDownPane select-pane -t= \; send-keys -M
+# bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+# bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
+# bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
+
+# Change window/pane indexing to start at 1 instead of 0 and renumber windows
+# eg if window 1,2,3 exist and window 2 is deleted window becomes the new window 2
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 
-bind -n 'M-{' previous-window
-bind -n 'M-}' next-window
-
-bind -n C-T new-window -c "#{pane_current_path}"
-bind C-T command-prompt -p "New Session:" "new-session -A -s '%%'"
-bind K confirm kill-session
-
-## fix slow escape in vim/nvim
+# Fix slow escape in vim/nvim
 set -sg escape-time 0
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-## macOS copy/paste fix
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
-
-### Update default binding of `Enter` to also use copy-pipe
+# Copy/Paste settings
 unbind -T copy-mode-vi Enter
-#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+if-shell -b '[[ "$OSTYPE" =~ "darwin" ]]' {
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+  bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+} {
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
+  bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "wl-copy"
+}
 
+# Fix for autoread in nvim
+set-option -g focus-events on
+
+# Sessions
+bind K confirm kill-session
+
+# Status bar
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
