--- a/_tmux.conf
+++ b/_tmux.conf
@@ -84,3 +84,6 @@ set -g status-left "#[fg=#1d2021,bg=#00afff] #S #[fg=#00afff,bg=#3c3836,nobold,n
 set -g status-right "#[fg=#00afff,bg=#504945,nobold,nounderscore,noitalics]#[fg=#1d2021,bg=#00afff] #h #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#00afff,bg=#3c3836] %R #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#00afff,bg=#504945] %a %Y-%m-%d"
 setw -g window-status-format "#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[default] #I #W #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]#[fg=#00afff,bg=#504945] #I #W #[fg=#504945,bg=#3c3836,nobold,nounderscore,noitalics]"
+
+# NEOVIM control sequences https://neovim.io/doc/user/tui.html#tui-input
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
