Sets up fzf and makes some aerospace key updates

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -98,10 +98,10 @@ cmd-k = 'focus up'
 cmd-l = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
-alt-shift-l = 'move right'
+cmd-shift-h = 'move left'
+cmd-shift-j = 'move down'
+cmd-shift-k = 'move up'
+cmd-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-shift-minus = 'resize smart -50'
@@ -139,6 +139,10 @@ cmd-9 = 'workspace 9'
 # alt-x = 'workspace X'
 # alt-y = 'workspace Y'
 # alt-z = 'workspace Z'
+
+# Next|Prev workspace
+alt-shift-h = 'workspace prev --wrap-around'
+alt-shift-l = 'workspace next --wrap-around'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace 1'
