adds some aliases

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
+# Fix backspace (and other non-printing chars)
+#set -g default-terminal "screen-256color"
+
 # Fix colors
 set -ag terminal-overrides ",$TERM:RGB"
 
