--- a/_alacritty.toml
+++ b/_alacritty.toml
@@ -1,7 +1,14 @@
+[general]
+live_config_reload=true
+
 [env]
 TERM="xterm-256color"
 [font]
-size=15
+size=18
+
+[font.normal]
+family = "UbuntuMono Nerd Font Mono"
+style = "Regular"
 
 [window]
 option_as_alt="Both"
